k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: freewayvpn.top  # 配置域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: api.freewayvpn.top  # 配置子域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webservice
            port:
              number: 80
